adição de efeitos no menu lateral da esquerda e icones de configurações no menu do topo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobby Valorant</title>
     <link rel="stylesheet" href="lobby.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header class="cabecalho">
         <nav class="menu-nav">
-            <figure class="logo"><img src="https://static.vecteezy.com/system/resources/previews/019/763/186/original/valorant-logo-transparent-free-png.png" alt="logo">VALORANT</figure>
+            <figure class="logo-left"><img src="https://static.vecteezy.com/system/resources/previews/019/763/186/original/valorant-logo-transparent-free-png.png" alt="logo">VALORANT</figure>
             <div>
                 <ul class="menu-top-right">
                     <li><b>&#8464; 0/4</b></li>
@@ -18,21 +19,22 @@
                     <li><b>&#8488; 620</b></li>
                     <li><b>&#8501; 7.002</b></li>
                 </ul>
+                <span><i class="fa-solid fa-gear"></i></span>
             </div>
         </nav>
     </header>
     <main class="main-content">
         <video src="vava video.mp4" class="fundo-intro" muted autoplay loop></video>
         <section class="page-content">
-            <ul class="menu-left">
-                <li><span>jogar</span></li>
-                <li><span>premier</span></li>
-                <li><span>carreira</span></li>
-                <li><span>passe de batalha</span></li>
-                <li><span>coleção</span></li>
-                <li><span>agentes</span></li>
-                <li><span>loja</span></li>
-            </ul>
+            <div class="menu-left">
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="" class="first-item">jogar</a></span>
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">premier</a></span>
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">carreira</a></span>
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">passe de batalha</a> </span>
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">coleção</a></span>
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">agentes</a></span>
+                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">loja</a></span>
+            </div>
         </section>
     </main>
 </body>
