menu lateral da direita quase pronto, faltando alterações de holver e efeitos

--- a/index.html
+++ b/index.html
@@ -26,14 +26,26 @@
     <main class="main-content">
         <video src="vava video.mp4" class="fundo-intro" muted autoplay loop></video>
         <section class="page-content">
-            <div class="menu-left">
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="" class="first-item">jogar</a></span>
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">premier</a></span>
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">carreira</a></span>
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">passe de batalha</a> </span>
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">coleção</a></span>
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">agentes</a></span>
-                <span><i class="fa-sharp fa-solid fa-square"></i> <a href="">loja</a></span>
+            <ul class="menu-left">
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="" class="first-item">jogar</a></li>
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">premier</a></li>
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">carreira</a></li>
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">passe de batalha</a></li>
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">coleção</a></li>
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">agentes</a></li>
+                <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">loja</a></li>
+            </ul>
+            <i class="fa-solid fa-chevron-left btn-open-menu-right"></i>
+            <div class="menu-right">
+                <ul class="list-menu-right">
+                    <li class="perfil-icon"><figure><img src="https://img.quizur.com/f/img6012b28b2306b2.31206975.jpg?lastEdited=1611838095" alt=""><i class="fa-solid fa-circle icon-online-circle"></i></figure></li>
+                    <li class="number-players">0</li>
+                    <li class="number-players">3</li>
+                    <li class="perfil-icon"><figure><img src="https://i.pinimg.com/236x/db/31/5a/db315a6647c7f14efb3064e5e286e2a2.jpg" alt=""></figure><i class="fa-solid fa-circle icon-online-circle"></i></li>
+                    <li class="perfil-icon"><figure><img src="https://i.pinimg.com/236x/db/31/5a/db315a6647c7f14efb3064e5e286e2a2.jpg" alt=""></figure><i class="fa-solid fa-circle icon-online-circle"></i></li>
+                    <li class="perfil-icon"><figure><img src="https://i.pinimg.com/236x/db/31/5a/db315a6647c7f14efb3064e5e286e2a2.jpg" alt=""></figure><i class="fa-solid fa-circle icon-online-circle"></i></li>
+                    <li class="number-players">78</li>
+                </ul>
             </div>
         </section>
     </main>
