botão de settings feito com aparição do menu e saida do menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><b>&#8488; 620</b></li>
                     <li><b>&#8501; 7.002</b></li>
                 </ul>
-                <span><i class="fa-solid fa-gear"></i></span>
+                <span><a href="#sectionOptions"class="options-btn"><i class="fa-solid fa-gear"></i></a></span>
             </div>
         </nav>
     </header>
@@ -58,7 +58,7 @@
                     </li>
                     <li class="block-list">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/LoL_icon.svg/1200px-LoL_icon.svg.png" alt="" class="perfil-icon">
-                        <p class="perfil-name">CRis</p>
+                        <p class="perfil-name">CRiS</p>
                     </li>
                     <li class="block-list">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/LoL_icon.svg/1200px-LoL_icon.svg.png" alt="" class="perfil-icon">
@@ -80,6 +80,16 @@
                 </ul>
             </div>
             <i class="fa-solid fa-chevron-left btn-open-menu-right" id="btnMenu"></i>
+        </section>
+        <section class="section-options" id="sectionOptions">
+            <ul class="menu-options">
+                <a href="#corpo" class="btn-exit-menu"><i class="fa-solid fa-xmark"></i></a>
+                <li class="list-menu-options"><a href="" class="block-menu-options">configuraçoes</a></li>
+                <li class="list-menu-options"><a href="" class="block-menu-options">suporte</a></li>
+                <li class="list-menu-options"><a href="" class="block-menu-options">sobre</a></li>
+                <li class="list-menu-options"><a href="" class="block-menu-options exit-block">sair para área de trabalho</a></li>
+                <li class="version-options"><p>07.01.00.925799</p></li>
+            </ul>
         </section>
     </main>
 </body>
