painel da direita finalizado, ajuster no tamanho do menu da direita e adição dos efeitos no painel

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">agentes</a></li>
                 <li class="list-menu"><i class="fa-sharp fa-solid fa-square"></i> <a href="">loja</a></li>
             </ul>
-            <div class="menu-right" id="menuRight">
+            <aside class="menu-right" id="menuRight">
                 <ul class="list-menu-right">
                     <li class="block-list">
                         <img src="https://pbs.twimg.com/media/FCgBgQzXoA0GqeM.jpg" alt="" class="perfil-icon">
@@ -78,18 +78,31 @@
                         <i class="fa-solid fa-chevron-down drop-arrow"></i>
                     </li>
                 </ul>
-            </div>
+            </aside>
             <i class="fa-solid fa-chevron-left btn-open-menu-right" id="btnMenu"></i>
         </section>
         <section class="section-options" id="sectionOptions">
             <ul class="menu-options">
                 <a href="#corpo" class="btn-exit-menu"><i class="fa-solid fa-xmark"></i></a>
-                <li class="list-menu-options"><a href="" class="block-menu-options">configuraçoes</a></li>
+                <li class="list-menu-options"><a href="" class="block-menu-options">configurações</a></li>
                 <li class="list-menu-options"><a href="" class="block-menu-options">suporte</a></li>
                 <li class="list-menu-options"><a href="" class="block-menu-options">sobre</a></li>
+                <li class="list-menu-options"><i class="arrow-menu fa-solid fa-chevron-down"></i></li>
                 <li class="list-menu-options"><a href="" class="block-menu-options exit-block">sair para área de trabalho</a></li>
                 <li class="version-options"><p>07.01.00.925799</p></li>
             </ul>
+        </section>
+        <section class="section-panel">
+            <figure class="highlights"><img src="destaques-img.png" alt=""></figure>
+            <figure class="slider"><img src="slider-img.png" alt=""></figure>
+            <div class="block-panel">
+                <a href="" class="block-text">notas de atualização</a>
+                <p class="version-panel">7.01</p>
+            </div>
+            <div class="block-highlights-mode">
+                <a href="" class="title-mode">modos em destaque</a>
+                <span class="block-mode"><i class="icon-mode fa-solid fa-crosshairs"></i><p class="name-mode">mata mata em equipe</p><p class="time-mode">8 a 10 min</p></span>
+            </div>
         </section>
     </main>
 </body>
